fix: fix layout bugs

--- a/assets/stylesheets/components/_popup.scss
+++ b/assets/stylesheets/components/_popup.scss
@@ -21,3 +21,12 @@
     position: absolute;
     top: 30px;
 }
+
+.pets-popup-mask {
+    display: none;
+    z-index: 10;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+}
