--- a/assets/stylesheets/pages/_donate.scss
+++ b/assets/stylesheets/pages/_donate.scss
@@ -111,7 +111,7 @@
   }
 }
 
-.pick-and-feed__button {
+.pick-and-feed__button_donate {
   margin: 31px auto 30px 342px;
 }
 
